@@ -34,14 +34,23 @@
     </description>
 
     <properties>
-        <findbugs.skip>false</findbugs.skip>
-        <findbugs.threshold>Low</findbugs.threshold>
-        <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
+        <spotbugs.threshold>Low</spotbugs.threshold>
+        <spotbugs.exclude>${project.basedir}/exclude.xml</spotbugs.exclude>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
         </dependency>
         <dependency>
@@ -55,14 +64,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.glassfish.jaxb</groupId>
             <artifactId>xsom</artifactId>
-            <version>${xsom.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
+            <groupId>org.glassfish.jaxb</groupId>
             <artifactId>codemodel</artifactId>
-            <version>${codemodel.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind.external</groupId>
@@ -77,14 +84,6 @@
             <artifactId>istack-commons-tools</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.sun.istack</groupId>
-            <artifactId>istack-commons-runtime</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.bind.external</groupId>
-            <artifactId>relaxng-datatype</artifactId>
-        </dependency>
-        <dependency>
             <groupId>args4j</groupId>
             <artifactId>args4j</artifactId>
             <scope>test</scope>
@@ -92,6 +91,7 @@
         <dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
+            <optional>true</optional>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -128,17 +128,6 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/lib/ant</outputDirectory>
                             <includeArtifactIds>ant,ant-launcher,ant-nodeps,cobertura</includeArtifactIds>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>copy-resolver</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/mods</outputDirectory>
-                            <includeArtifactIds>resolver</includeArtifactIds>
                         </configuration>
                     </execution>
                     <execution>
@@ -214,19 +203,13 @@
                     <execution>
                         <id>default-compile</id>
                         <configuration>
-                            <source>${upper.java.level}</source>
-                            <target>${upper.java.level}</target>
                             <compilerArgs>
-                                <arg>--upgrade-module-path</arg>
-                                <arg>${project.build.directory}/mods/${path.separator}${project.build.directory}/lib/ant</arg>
-                                <arg>--add-modules</arg>
-                                <arg>ant,resolver</arg>
                                 <arg>--add-reads</arg>
-                                <arg>com.sun.tools.xjc=ant</arg>
+                                <arg>com.sun.tools.xjc=ALL-UNNAMED</arg>
                                 <arg>--add-reads</arg>
-                                <arg>com.sun.istack.tools=ant</arg>
+                                <arg>com.sun.istack.tools=ALL-UNNAMED</arg>
                                 <arg>--add-reads</arg>
-                                <arg>com.sun.tools.xjc=resolver</arg>
+                                <arg>com.sun.tools.xjc=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -246,14 +229,8 @@
                     </execution>
                     <execution>
                         <id>base-compile</id>
-                        <goals>
-                            <goal>compile</goal>
-                        </goals>
                         <configuration>
                             <release>${base.java.level}</release>
-                            <excludes>
-                                <exclude>module-info.java</exclude>
-                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
@@ -263,20 +240,12 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <additionalJOptions>
-                        <!-- javadoc plugin 3.0.1 overrides module-path, by opt/arg files,
-                        but java treats upgrade-module-path as module-path if modules are non-upgradable -->
-                        <additionalJOption>--upgrade-module-path</additionalJOption>
-                        <additionalJOption>${project.build.directory}/mods</additionalJOption>
-                        <additionalJOption>--add-modules</additionalJOption>
-                        <additionalJOption>ant</additionalJOption>
                         <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.istack.tools=ant</additionalJOption>
+                        <additionalJOption>com.sun.tools.xjc=ALL-UNNAMED</additionalJOption>
                         <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.tools.xjc=ant</additionalJOption>
-                        <!--Non MR-JAR version of xjc/src/main/java/com/sun/tools/xjc/CatalogUtil.java uses
-                         com.sun.org.apache.xml.internal.resolver (see resolver dependency)-->
+                        <additionalJOption>com.sun.istack.tools=ALL-UNNAMED</additionalJOption>
                         <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.tools.xjc=resolver</additionalJOption>
+                        <additionalJOption>com.sun.tools.xjc=ALL-UNNAMED</additionalJOption>
                     </additionalJOptions>
                 </configuration>
             </plugin>
